--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "client",
   "version": "0.1.0",
   "proxy": "http://localhost:5000",
-
   "private": true,
   "dependencies": {
-    
-
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fortawesome/fontawesome-free": "^6.7.1",
@@ -15,14 +12,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "webpack": "^5.97.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,5 +54,4 @@
   "keywords": [],
   "author": "",
   "license": "ISC"
-  
 }
